# rust_algebra

./: .gitignore  Cargo.toml  README.md
graph/: Cargo.toml
graph/src/: builder.rs  converters.rs  error.rs  graph_traits.rs  lib.rs  recursive_types.rs  reference_types.rs  typed_tree.rs  utility_traits.rs
graph/tests/: test_external_reference.rs  test_integer_addition.rs  test_peano_api.rs  test_peano_arithmetic.rs
graph_derive/: Cargo.toml
graph_derive/src/: graph_derive.rs  impl_annotate.rs  impl_builder.rs  impl_linearize.rs  lib.rs  utils.rs
src/: error.rs  expr.rs  expr_equality.rs  formatter.rs  graph.rs  graph_expr.rs  lib.rs  old_expr.rs  old_parser.rs  parser.rs  tokenizer.rs
tests/: expression_equality.rs  expression_formatting.rs  expression_parsing.rs
typed_dag/: Cargo.toml
typed_dag/src/: arena.rs  error.rs  recursive_types.rs  reference_converters.rs  reference_types.rs  visitor_trait.rs
typed_dag/tests/: standalone_api_testing.rs  test_external_reference.rs  test_integer_addition.rs  test_peano_arithmetic.rs
typed_dag_derive/: Cargo.toml
typed_dag_derive/src/: impl_annotate.rs  impl_linearize.rs  impl_tree.rs  lib.rs
