[package]
name = "algebra"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# itertools = "*"
thiserror = "1.0.32"
graph_derive = { path = "graph_derive" }
graph = { path = "graph" }

[lib]
name = "algebra"