[package]
name = "algebra"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# itertools = "*"
thiserror = "1.0.32"
typed_dag_derive = { path = "typed_dag_derive" }
typed_dag = { path = "typed_dag" }

[lib]
name = "algebra"