[package]
name = "typed_dag_derive"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10.5"
proc-macro2 = "1.0.56"
quote = "1.0.26"

syn = {version = "2.0.0", features = ["full","extra-traits", "fold", "visit"]}